<resources>

    <!-- App name strings. -->
    <string name="app_name">The Guardian News Client</string>
    <string name="app_name_short">News</string>

    <!-- Action bar strings. -->
    <string name="main_activity_no_search_label">All Articles Ordered By %1$s</string>
    <string name="main_activity_search_label">\"%1$s\" Ordered By %2$s</string>
    <string name="settings_activity_label">Search Settings</string>
    <string name="action_refresh_label">Refresh</string>
    <string name="action_settings_label">Settings</string>

    <!-- Recycler view strings. -->
    <string name="unknown_author_label">Unknown author</string>
    <string name="empty_list_label">No articles found.</string>
    <string name="error_label">Error fetching articles. Tap to retry.</string>
    <string name="end_of_list_label">No more articles.</string>

    <!-- Order by setting strings. -->
    <string name="order_by_label">Order By</string>
    <string name="order_by_key" translatable="false">order_by</string>
    <string name="order_by_default_value" translatable="false">@string/order_by_newest_value</string>
    <string name="order_by_newest_label">Newest</string>
    <string name="order_by_newest_value" translatable="false">newest</string>
    <string name="order_by_oldest_label">Oldest</string>
    <string name="order_by_oldest_value" translatable="false">oldest</string>
    <string name="order_by_relevance_label">Relevance</string>
    <string name="order_by_relevance_value" translatable="false">relevance</string>

    <!-- Search term setting strings. -->
    <string name="search_term_label">Search Term</string>
    <string name="search_term_key" translatable="false">search_term</string>
    <string name="search_term_default_value" translatable="false" />
    <string name="search_term_empty_label">No search term defined</string>

    <!-- About setting strings. -->
    <string name="about_label">About</string>
    <string name="about_key" translatable="false">about</string>
    <string name="about_dialog_title_label">About</string>
    <string name="about_dialog_message_label">All news articles are sourced by Guardian News &amp; Media Limited. Their contact information can be found on their website.</string>
    <string name="about_dialog_positive_button_label">Visit Website</string>

    <!-- Other strings. -->
    <string name="no_browser_label">Install a browser app to open the link</string>

</resources>